force-app/main/default/objects/Console_Audit__c/Console_Audit__c.object-meta.xml
<CustomObject>
    <description>Audit log for all actions taken via the Public Event LWC console</description>
    <label>Console Audit</label>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Console Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Console Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>