force-app/main/default/objects/Console_Audit__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>e.g. Pause Sales, Open Sales, Approve Refund</description>
    <label>Action</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>