force-app/main/default/objects/Console_Audit__c/fields/Performed_By__c.field-meta.xml
<CustomField>
    <fullName>Performed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Performed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Console Actions</relationshipLabel>
    <relationshipName>Console_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>